--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "postcss-import": "^12.0",
         "postcss-nested": "^4.2",
         "tailwindcss": "^3.1.8",
+        "tailwindcss-writing-mode": "^1.0.0",
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
